--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
                 <a href="advice/melissajohnson-advice.html" target="_blank">Melissa Johnson's Advice</a><br>
                 <a href="advice/carle-advice.html" target="_blank">Carl's Advice</a><br>
 		<a href="advice/annabel-advice.html" target="_blank">Annabel's Advice</a><br>
-		<a href="advice/christinenicole-advice.html" target="_blank">Christine Nicole's Advice</a><br>
+        <a href="advice/christinenicole-advice.html" target="_blank">Christine Nicole's Advice</a><br>
+        <a href="advice/LeeAnns-advice.html" target="_blank">Lee Ann's Advice</a><br>
 		<a href="advice/lyd-medina-advice.html" target="_blank">Lydia's Advice</a><br>
                 <a href="advice/carol-advice.html" targer="_blank">Carol's Advice</a><br>
                 <a href="advice/husky45.html" target="blank">Husky45's 2 cents</a><br>
